[package]
name = "task_shell_wrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dynamic c lib
[lib]
name = "task_shell_wrap"
crate-type = ["cdylib"]

[dependencies]
deno_task_shell = "0.1.9"
tokio = "1.17.0"
once_cell = "1.0.1"
